fix prompt spacing

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -84,5 +84,5 @@
     background-clip: text;
     text-align:center;
     text-transform: uppercase;
-    width: 80%;
+    width: 100%;
 }
